// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Badge > renders correctly prominence default 1`] = `
<DocumentFragment>
  .emotion-1 {
  font-size: 0.75rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 1rem;
  padding: 0 0.75rem;
  gap: 0.5rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 1.5rem;
  text-transform: uppercase;
  color: #3f4250;
  background: #f9f9fa;
  border: 1px solid #d9dadd;
}

<div
    data-testid="testing"
  >
    <span
      class="emotion-0 emotion-1 emotion-2"
    >
      Sample badge
    </span>
  </div>
</DocumentFragment>
`;

exports[`Badge > renders correctly prominence strong 1`] = `
<DocumentFragment>
  .emotion-1 {
  font-size: 0.75rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 1rem;
  padding: 0 0.75rem;
  gap: 0.5rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 1.5rem;
  text-transform: uppercase;
  color: #ffffff;
  background: #151a2d;
  border: 1px solid #151a2d;
}

<div
    data-testid="testing"
  >
    <span
      class="emotion-0 emotion-1 emotion-2"
    >
      Sample badge
    </span>
  </div>
</DocumentFragment>
`;

exports[`Badge > renders correctly sentiment danger 1`] = `
<DocumentFragment>
  .emotion-1 {
  font-size: 0.75rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 1rem;
  padding: 0 0.75rem;
  gap: 0.5rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 1.5rem;
  text-transform: uppercase;
  color: #b3144d;
  background: #ffebf2;
  border: 1px solid #ffebf2;
}

<div
    data-testid="testing"
  >
    <span
      class="emotion-0 emotion-1 emotion-2"
    >
      Sample badge
    </span>
  </div>
</DocumentFragment>
`;

exports[`Badge > renders correctly sentiment info 1`] = `
<DocumentFragment>
  .emotion-1 {
  font-size: 0.75rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 1rem;
  padding: 0 0.75rem;
  gap: 0.5rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 1.5rem;
  text-transform: uppercase;
  color: #005da3;
  background: #e0f2ff;
  border: 1px solid #e0f2ff;
}

<div
    data-testid="testing"
  >
    <span
      class="emotion-0 emotion-1 emotion-2"
    >
      Sample badge
    </span>
  </div>
</DocumentFragment>
`;

exports[`Badge > renders correctly sentiment neutral 1`] = `
<DocumentFragment>
  .emotion-1 {
  font-size: 0.75rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 1rem;
  padding: 0 0.75rem;
  gap: 0.5rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 1.5rem;
  text-transform: uppercase;
  color: #3f4250;
  background: #f9f9fa;
  border: 1px solid #d9dadd;
}

<div
    data-testid="testing"
  >
    <span
      class="emotion-0 emotion-1 emotion-2"
    >
      Sample badge
    </span>
  </div>
</DocumentFragment>
`;

exports[`Badge > renders correctly sentiment primary 1`] = `
<DocumentFragment>
  .emotion-1 {
  font-size: 0.75rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 1rem;
  padding: 0 0.75rem;
  gap: 0.5rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 1.5rem;
  text-transform: uppercase;
  color: #641cb3;
  background: #f1eefc;
  border: 1px solid #f1eefc;
}

<div
    data-testid="testing"
  >
    <span
      class="emotion-0 emotion-1 emotion-2"
    >
      Sample badge
    </span>
  </div>
</DocumentFragment>
`;

exports[`Badge > renders correctly sentiment secondary 1`] = `
<DocumentFragment>
  .emotion-1 {
  font-size: 0.75rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 1rem;
  padding: 0 0.75rem;
  gap: 0.5rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 1.5rem;
  text-transform: uppercase;
  color: #ac22e7;
  background: #f9ebff;
  border: 1px solid #f9ebff;
}

<div
    data-testid="testing"
  >
    <span
      class="emotion-0 emotion-1 emotion-2"
    >
      Sample badge
    </span>
  </div>
</DocumentFragment>
`;

exports[`Badge > renders correctly sentiment success 1`] = `
<DocumentFragment>
  .emotion-1 {
  font-size: 0.75rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 1rem;
  padding: 0 0.75rem;
  gap: 0.5rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 1.5rem;
  text-transform: uppercase;
  color: #22674e;
  background: #daf6ec;
  border: 1px solid #daf6ec;
}

<div
    data-testid="testing"
  >
    <span
      class="emotion-0 emotion-1 emotion-2"
    >
      Sample badge
    </span>
  </div>
</DocumentFragment>
`;

exports[`Badge > renders correctly sentiment warning 1`] = `
<DocumentFragment>
  .emotion-1 {
  font-size: 0.75rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 1rem;
  padding: 0 0.75rem;
  gap: 0.5rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 1.5rem;
  text-transform: uppercase;
  color: #7c5400;
  background: #fff6e6;
  border: 1px solid #fff6e6;
}

<div
    data-testid="testing"
  >
    <span
      class="emotion-0 emotion-1 emotion-2"
    >
      Sample badge
    </span>
  </div>
</DocumentFragment>
`;

exports[`Badge > renders correctly size large 1`] = `
<DocumentFragment>
  .emotion-1 {
  font-size: 0.875rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1.25rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 1rem;
  padding: 0 1rem;
  gap: 0.5rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 2rem;
  text-transform: uppercase;
  color: #3f4250;
  background: #f9f9fa;
  border: 1px solid #d9dadd;
}

<div
    data-testid="testing"
  >
    <span
      class="emotion-0 emotion-1 emotion-2"
    >
      Sample badge
    </span>
  </div>
</DocumentFragment>
`;

exports[`Badge > renders correctly size medium 1`] = `
<DocumentFragment>
  .emotion-1 {
  font-size: 0.75rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 1rem;
  padding: 0 0.75rem;
  gap: 0.5rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 1.5rem;
  text-transform: uppercase;
  color: #3f4250;
  background: #f9f9fa;
  border: 1px solid #d9dadd;
}

<div
    data-testid="testing"
  >
    <span
      class="emotion-0 emotion-1 emotion-2"
    >
      Sample badge
    </span>
  </div>
</DocumentFragment>
`;

exports[`Badge > renders correctly size small 1`] = `
<DocumentFragment>
  .emotion-1 {
  font-size: 0.625rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 1rem;
  padding: 0 0.5rem;
  gap: 0.25rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 1rem;
  text-transform: uppercase;
  color: #3f4250;
  background: #f9f9fa;
  border: 1px solid #d9dadd;
}

<div
    data-testid="testing"
  >
    <span
      class="emotion-0 emotion-1 emotion-2"
    >
      Sample badge
    </span>
  </div>
</DocumentFragment>
`;

exports[`Badge > renders correctly when disabled 1`] = `
<DocumentFragment>
  .emotion-1 {
  font-size: 0.75rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 1rem;
  padding: 0 0.75rem;
  gap: 0.5rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 1.5rem;
  text-transform: uppercase;
  color: #727683;
  background: #e9eaeb;
  border: none;
}

<div
    data-testid="testing"
  >
    <span
      class="emotion-0 emotion-1 emotion-2"
    >
      Sample badge
    </span>
  </div>
</DocumentFragment>
`;

exports[`Badge > renders correctly with default values 1`] = `
<DocumentFragment>
  .emotion-1 {
  font-size: 0.75rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 1rem;
  padding: 0 0.75rem;
  gap: 0.5rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 1.5rem;
  text-transform: uppercase;
  color: #3f4250;
  background: #f9f9fa;
  border: 1px solid #d9dadd;
}

<div
    data-testid="testing"
  >
    <span
      class="emotion-0 emotion-1 emotion-2"
    >
      Sample badge
    </span>
  </div>
</DocumentFragment>
`;

exports[`Badge > renders correctly with icon 1`] = `
<DocumentFragment>
  .emotion-1 {
  font-size: 0.75rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 1rem;
  padding: 0 0.75rem;
  gap: 0.5rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 1.5rem;
  text-transform: uppercase;
  color: #3f4250;
  background: #f9f9fa;
  border: 1px solid #d9dadd;
}

.emotion-3 {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.emotion-3 .fillStroke {
  stroke: currentColor;
  fill: none;
}

<div
    data-testid="testing"
  >
    <span
      class="emotion-0 emotion-1 emotion-2"
    >
      <svg
        class="emotion-3 emotion-4"
        fill="none"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M15 8A7 7 0 1 1 1 8a7 7 0 0 1 14 0M9 5a1 1 0 1 1-2 0 1 1 0 0 1 2 0M6.75 8a.75.75 0 0 0 0 1.5h.75v1.75a.75.75 0 0 0 1.5 0v-2.5A.75.75 0 0 0 8.25 8z"
        />
      </svg>
      Sample badge
    </span>
  </div>
</DocumentFragment>
`;
